--- a/src/app/components/weather-info/weather-info.component.scss
+++ b/src/app/components/weather-info/weather-info.component.scss
@@ -12,6 +12,9 @@
     &--card {
       flex-flow: wrap;
       width: 200px;
+      .city-name {
+        border: 1px solid red;
+      }
     }
 
     .next {
