feat(ngWeather): corrected scaffolding

--- a/src/app/components/weather-error/weather-error.component.html
+++ b/src/app/components/weather-error/weather-error.component.html
@@ -10,7 +10,7 @@
       The path requested could not be found.
     </mat-card-content>
     <mat-card-actions>
-      <p class="next" routerLink="/weather">Home</p>
+      <a mat-raised-button color="primary" routerLink="/weather">Home</a>
     </mat-card-actions>
   </mat-card>
 </div>
