--- a/src/app/components/weather-info/weather-info.component.html
+++ b/src/app/components/weather-info/weather-info.component.html
@@ -16,7 +16,7 @@
           width="40"
         />
       </div>
-      <mat-card-title style="city-name">{{ city.name }}</mat-card-title>
+      <mat-card-title>{{ city.name | slice: 0:10 }}</mat-card-title>
       <mat-card-subtitle>{{ city.weather[0].main }}</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
@@ -24,7 +24,7 @@
       <p>{{ city.wind.speed }} miles/h</p>
     </mat-card-content>
     <mat-card-actions>
-      <a mat-raised-button routerLink="/weatherDetail/{{ i }}"
+      <a mat-raised-button color="primary" routerLink="/weatherDetail/{{ i }}"
         >View Next 48 Hours</a
       >
     </mat-card-actions>
